Fixes selection and setting html issue

--- a/singles/index.html
+++ b/singles/index.html
@@ -79,12 +79,12 @@
 		</select>
   	</div>
     <button id="run">Run</button>
-    <div id="refOne" />	
-    <div id="refTwo" />
-    <div id="refThree" />
-    <div id="refFour" />
-    <div id="refFive" />
-    <div id="refSix" />
+    <div id="refOne"></div>	
+    <div id="refTwo"></div>
+    <div id="refThree"></div>
+    <div id="refFour"></div>
+    <div id="refFive"></div>
+    <div id="refSix"></div>
     <script src="../players.js"></script>
     <script src="./selectRef.js"></script>
     <script src="./app.js"></script>
