--- a/doubles/index.html
+++ b/doubles/index.html
@@ -103,9 +103,9 @@
 		</select>
   	</div>
     <button id="run">Run</button>
-    <div id="refOne" />	
-    <div id="refTwo" />
-    <div id="refThree" />
+    <div id="refOne"></div>	
+    <div id="refTwo"></div>
+    <div id="refThree"></div>
     <script src="../players.js"></script>
     <script src="./selectRef.js"></script>
     <script src="./app.js"></script>
