Adds a TODO about CSS

--- a/singles/index.html
+++ b/singles/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Ref Singles</title>
+    <!-- TODO Adds some CSS -->
   </head>
   <body>
   	<div>
