--- a/singles/index.html
+++ b/singles/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Ref Singles</title>
-    <!-- TODO Adds some CSS -->
+    <style>
+    	body, select, button {
+    		font-size: 40px;
+    	}
+    </style>
   </head>
   <body>
   	<div>
