--- a/doubles/index.html
+++ b/doubles/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Ref Doubles</title>
+	   <style>
+    	body, select, button {
+    		font-size: 40px;
+    	}
+	  </style>
   </head>
   <body>
   	<div>
   		PLAYED SIX
-	  	<select name="playedSix" id="playedSix">
+	  	<select name="playSix" id="playSix">
 			<option value="DD">DD</option>
 			<option value="DM">DM</option>
 			<option value="JC">JC</option>
