Adds final settings, fixes random selection, and adds star notifier

--- a/singles/index.html
+++ b/singles/index.html
@@ -13,74 +13,74 @@
   	<div>
   		ONE
 	  	<select name="one" id="one">
-			<option value="DD">DD</option>
-			<option value="DM">DM</option>
-			<option value="JC">JC</option>
-			<option value="JK">JK</option>
-			<option value="ND">ND</option>
-			<option value="PC">PC</option>
-			<option value="MS">MS</option>
-			<option value="SC">SC</option>
+			<option value="DD">DD (A)</option>
+			<option value="DM">DM (A)</option>
+			<option value="JC">JC (B)</option>
+			<option value="JK">JK (A)</option>
+			<option value="MS">MS (B)</option>
+			<option value="ND">ND (B)</option>
+			<option value="PC">PC (B)</option>
+			<option value="SC">SC (B)</option>
 		</select>
 		<br/>
   		TWO
 	  	<select name="two" id="two">
-			<option value="DD">DD</option>
-			<option value="DM">DM</option>
-			<option value="JC">JC</option>
-			<option value="JK">JK</option>
-			<option value="ND">ND</option>
-			<option value="PC">PC</option>
-			<option value="MS">MS</option>
-			<option value="SC">SC</option>
+			<option value="DD">DD (A)</option>
+			<option value="DM">DM (A)</option>
+			<option value="JC">JC (B)</option>
+			<option value="JK">JK (A)</option>
+			<option value="MS">MS (B)</option>
+			<option value="ND">ND (B)</option>
+			<option value="PC">PC (B)</option>
+			<option value="SC">SC (B)</option>
 		</select>
 		<br/>
   		THREE
 	  	<select name="three" id="three">
-			<option value="DD">DD</option>
-			<option value="DM">DM</option>
-			<option value="JC">JC</option>
-			<option value="JK">JK</option>
-			<option value="ND">ND</option>
-			<option value="PC">PC</option>
-			<option value="MS">MS</option>
-			<option value="SC">SC</option>
+			<option value="DD">DD (A)</option>
+			<option value="DM">DM (A)</option>
+			<option value="JC">JC (B)</option>
+			<option value="JK">JK (A)</option>
+			<option value="MS">MS (B)</option>
+			<option value="ND">ND (B)</option>
+			<option value="PC">PC (B)</option>
+			<option value="SC">SC (B)</option>
 		</select>
 		<br/>
   		FOUR
 	  	<select name="four" id="four">
-			<option value="DD">DD</option>
-			<option value="DM">DM</option>
-			<option value="JC">JC</option>
-			<option value="JK">JK</option>
-			<option value="ND">ND</option>
-			<option value="PC">PC</option>
-			<option value="MS">MS</option>
-			<option value="SC">SC</option>
+			<option value="DD">DD (A)</option>
+			<option value="DM">DM (A)</option>
+			<option value="JC">JC (B)</option>
+			<option value="JK">JK (A)</option>
+			<option value="MS">MS (B)</option>
+			<option value="ND">ND (B)</option>
+			<option value="PC">PC (B)</option>
+			<option value="SC">SC (B)</option>
 		</select>
 		<br/>
   		FIVE
 	  	<select name="five" id="five">
-			<option value="DD">DD</option>
-			<option value="DM">DM</option>
-			<option value="JC">JC</option>
-			<option value="JK">JK</option>
-			<option value="ND">ND</option>
-			<option value="PC">PC</option>
-			<option value="MS">MS</option>
-			<option value="SC">SC</option>
+			<option value="DD">DD (A)</option>
+			<option value="DM">DM (A)</option>
+			<option value="JC">JC (B)</option>
+			<option value="JK">JK (A)</option>
+			<option value="MS">MS (B)</option>
+			<option value="ND">ND (B)</option>
+			<option value="PC">PC (B)</option>
+			<option value="SC">SC (B)</option>
 		</select>
 		<br/>
   		SIX
 	  	<select name="six" id="six">
-			<option value="DD">DD</option>
-			<option value="DM">DM</option>
-			<option value="JC">JC</option>
-			<option value="JK">JK</option>
-			<option value="ND">ND</option>
-			<option value="PC">PC</option>
-			<option value="MS">MS</option>
-			<option value="SC">SC</option>
+			<option value="DD">DD (A)</option>
+			<option value="DM">DM (A)</option>
+			<option value="JC">JC (B)</option>
+			<option value="JK">JK (A)</option>
+			<option value="MS">MS (B)</option>
+			<option value="ND">ND (B)</option>
+			<option value="PC">PC (B)</option>
+			<option value="SC">SC (B)</option>
 		</select>
   	</div>
     <button id="run">Run</button>
