--- a/doubles/index.html
+++ b/doubles/index.html
@@ -13,98 +13,98 @@
   	<div>
   		PLAYED SIX
 	  	<select name="playSix" id="playSix">
-			<option value="DD">DD</option>
-			<option value="DM">DM</option>
-			<option value="JC">JC</option>
-			<option value="JK">JK</option>
-			<option value="ND">ND</option>
-			<option value="PC">PC</option>
-			<option value="MS">MS</option>
-			<option value="SC">SC</option>
+			<option value="DD">DD (A)</option>
+			<option value="DM">DM (A)</option>
+			<option value="JC">JC (B)</option>
+			<option value="JK">JK (A)</option>
+			<option value="MS">MS (B)</option>
+			<option value="ND">ND (B)</option>
+			<option value="PC">PC (B)</option>
+			<option value="SC">SC (B)</option>
 		</select>
 		<br/>
   		REF SIX
 	  	<select name="refSix" id="refSix">
-			<option value="DD">DD</option>
-			<option value="DM">DM</option>
-			<option value="JC">JC</option>
-			<option value="JK">JK</option>
-			<option value="ND">ND</option>
-			<option value="PC">PC</option>
-			<option value="MS">MS</option>
-			<option value="SC">SC</option>
+			<option value="DD">DD (A)</option>
+			<option value="DM">DM (A)</option>
+			<option value="JC">JC (B)</option>
+			<option value="JK">JK (A)</option>
+			<option value="MS">MS (B)</option>
+			<option value="ND">ND (B)</option>
+			<option value="PC">PC (B)</option>
+			<option value="SC">SC (B)</option>
 		</select>
 		<br/>
   		ONE ONE
 	  	<select name="oneOne" id="oneOne">
-			<option value="DD">DD</option>
-			<option value="DM">DM</option>
-			<option value="JC">JC</option>
-			<option value="JK">JK</option>
-			<option value="ND">ND</option>
-			<option value="PC">PC</option>
-			<option value="MS">MS</option>
-			<option value="SC">SC</option>
+			<option value="DD">DD (A)</option>
+			<option value="DM">DM (A)</option>
+			<option value="JC">JC (B)</option>
+			<option value="JK">JK (A)</option>
+			<option value="MS">MS (B)</option>
+			<option value="ND">ND (B)</option>
+			<option value="PC">PC (B)</option>
+			<option value="SC">SC (B)</option>
 		</select>
 		<br/>
   		ONE TWO
 	  	<select name="oneTwo" id="oneTwo">
-			<option value="DD">DD</option>
-			<option value="DM">DM</option>
-			<option value="JC">JC</option>
-			<option value="JK">JK</option>
-			<option value="ND">ND</option>
-			<option value="PC">PC</option>
-			<option value="MS">MS</option>
-			<option value="SC">SC</option>
+			<option value="DD">DD (A)</option>
+			<option value="DM">DM (A)</option>
+			<option value="JC">JC (B)</option>
+			<option value="JK">JK (A)</option>
+			<option value="MS">MS (B)</option>
+			<option value="ND">ND (B)</option>
+			<option value="PC">PC (B)</option>
+			<option value="SC">SC (B)</option>
 		</select>
 		<br/>
   		TWO ONE
 	  	<select name="twoOne" id="twoOne">
-			<option value="DD">DD</option>
-			<option value="DM">DM</option>
-			<option value="JC">JC</option>
-			<option value="JK">JK</option>
-			<option value="ND">ND</option>
-			<option value="PC">PC</option>
-			<option value="MS">MS</option>
-			<option value="SC">SC</option>
+			<option value="DD">DD (A)</option>
+			<option value="DM">DM (A)</option>
+			<option value="JC">JC (B)</option>
+			<option value="JK">JK (A)</option>
+			<option value="MS">MS (B)</option>
+			<option value="ND">ND (B)</option>
+			<option value="PC">PC (B)</option>
+			<option value="SC">SC (B)</option>
 		</select>
 		<br/>
   		TWO TWO
 	  	<select name="twoTwo" id="twoTwo">
-			<option value="DD">DD</option>
-			<option value="DM">DM</option>
-			<option value="JC">JC</option>
-			<option value="JK">JK</option>
-			<option value="ND">ND</option>
-			<option value="PC">PC</option>
-			<option value="MS">MS</option>
-			<option value="SC">SC</option>
+			<option value="DD">DD (A)</option>
+			<option value="DM">DM (A)</option>
+			<option value="JC">JC (B)</option>
+			<option value="JK">JK (A)</option>
+			<option value="MS">MS (B)</option>
+			<option value="ND">ND (B)</option>
+			<option value="PC">PC (B)</option>
+			<option value="SC">SC (B)</option>
 		</select>
 		<br/>
   		THREE ONE
 	  	<select name="threeOne" id="threeOne">
-			<option value="DD">DD</option>
-			<option value="DM">DM</option>
-			<option value="JC">JC</option>
-			<option value="JK">JK</option>
-			<option value="ND">ND</option>
-			<option value="PC">PC</option>
-			<option value="MS">MS</option>
-			<option value="SC">SC</option>
+			<option value="DD">DD (A)</option>
+			<option value="DM">DM (A)</option>
+			<option value="JC">JC (B)</option>
+			<option value="JK">JK (A)</option>
+			<option value="MS">MS (B)</option>
+			<option value="ND">ND (B)</option>
+			<option value="PC">PC (B)</option>
+			<option value="SC">SC (B)</option>
 		</select>
 		<br/>
   		THREE TWO
 	  	<select name="threeTwo" id="threeTwo">
-			<option value="DD">DD</option>
-			<option value="DM">DM</option>
-			<option value="JC">JC</option>
-			<option value="JK">JK</option>
-			<option value="ND">ND</option>
-			<option value="PC">PC</option>
-			<option value="MS">MS</option>
-			<option value="SC">SC</option>
+			<option value="DD">DD (A)</option>
+			<option value="DM">DM (A)</option>
+			<option value="JC">JC (B)</option>
+			<option value="JK">JK (A)</option>
+			<option value="MS">MS (B)</option>
+			<option value="ND">ND (B)</option>
+			<option value="PC">PC (B)</option>
+			<option value="SC">SC (B)</option>
 		</select>
   	</div>
     <button id="run">Run</button>
