Adds NA in display

--- a/doubles/index.html
+++ b/doubles/index.html
@@ -18,6 +18,7 @@
 			<option value="JC">JC (B)</option>
 			<option value="JK">JK (A)</option>
 			<option value="MS">MS (B)</option>
+			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
 			<option value="SC">SC (B)</option>
@@ -30,6 +31,7 @@
 			<option value="JC">JC (B)</option>
 			<option value="JK">JK (A)</option>
 			<option value="MS">MS (B)</option>
+			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
 			<option value="SC">SC (B)</option>
@@ -42,6 +44,7 @@
 			<option value="JC">JC (B)</option>
 			<option value="JK">JK (A)</option>
 			<option value="MS">MS (B)</option>
+			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
 			<option value="SC">SC (B)</option>
@@ -54,6 +57,7 @@
 			<option value="JC">JC (B)</option>
 			<option value="JK">JK (A)</option>
 			<option value="MS">MS (B)</option>
+			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
 			<option value="SC">SC (B)</option>
@@ -66,6 +70,7 @@
 			<option value="JC">JC (B)</option>
 			<option value="JK">JK (A)</option>
 			<option value="MS">MS (B)</option>
+			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
 			<option value="SC">SC (B)</option>
@@ -78,6 +83,7 @@
 			<option value="JC">JC (B)</option>
 			<option value="JK">JK (A)</option>
 			<option value="MS">MS (B)</option>
+			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
 			<option value="SC">SC (B)</option>
@@ -90,6 +96,7 @@
 			<option value="JC">JC (B)</option>
 			<option value="JK">JK (A)</option>
 			<option value="MS">MS (B)</option>
+			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
 			<option value="SC">SC (B)</option>
@@ -102,6 +109,7 @@
 			<option value="JC">JC (B)</option>
 			<option value="JK">JK (A)</option>
 			<option value="MS">MS (B)</option>
+			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
 			<option value="SC">SC (B)</option>
