Adds new players

--- a/doubles/index.html
+++ b/doubles/index.html
@@ -16,12 +16,11 @@
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
 			<option value="JC">JC (B)</option>
-			<option value="JK">JK (A)</option>
-			<option value="MS">MS (B)</option>
+			<option value="LW">LW (A)</option>
 			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
-			<option value="SC">SC (B)</option>
+			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
   		REF SIX
@@ -29,12 +28,11 @@
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
 			<option value="JC">JC (B)</option>
-			<option value="JK">JK (A)</option>
-			<option value="MS">MS (B)</option>
+			<option value="LW">LW (A)</option>
 			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
-			<option value="SC">SC (B)</option>
+			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
   		ONE ONE
@@ -42,12 +40,11 @@
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
 			<option value="JC">JC (B)</option>
-			<option value="JK">JK (A)</option>
-			<option value="MS">MS (B)</option>
+			<option value="LW">LW (A)</option>
 			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
-			<option value="SC">SC (B)</option>
+			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
   		ONE TWO
@@ -55,12 +52,11 @@
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
 			<option value="JC">JC (B)</option>
-			<option value="JK">JK (A)</option>
-			<option value="MS">MS (B)</option>
+			<option value="LW">LW (A)</option>
 			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
-			<option value="SC">SC (B)</option>
+			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
   		TWO ONE
@@ -68,12 +64,11 @@
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
 			<option value="JC">JC (B)</option>
-			<option value="JK">JK (A)</option>
-			<option value="MS">MS (B)</option>
+			<option value="LW">LW (A)</option>
 			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
-			<option value="SC">SC (B)</option>
+			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
   		TWO TWO
@@ -81,12 +76,11 @@
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
 			<option value="JC">JC (B)</option>
-			<option value="JK">JK (A)</option>
-			<option value="MS">MS (B)</option>
+			<option value="LW">LW (A)</option>
 			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
-			<option value="SC">SC (B)</option>
+			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
   		THREE ONE
@@ -94,12 +88,11 @@
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
 			<option value="JC">JC (B)</option>
-			<option value="JK">JK (A)</option>
-			<option value="MS">MS (B)</option>
+			<option value="LW">LW (A)</option>
 			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
-			<option value="SC">SC (B)</option>
+			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
   		THREE TWO
@@ -107,12 +100,11 @@
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
 			<option value="JC">JC (B)</option>
-			<option value="JK">JK (A)</option>
-			<option value="MS">MS (B)</option>
+			<option value="LW">LW (A)</option>
 			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
-			<option value="SC">SC (B)</option>
+			<option value="SF">SF (A)</option>
 		</select>
   	</div>
     <button id="run">Run</button>
