--- a/singles/index.html
+++ b/singles/index.html
@@ -16,12 +16,11 @@
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
 			<option value="JC">JC (B)</option>
-			<option value="JK">JK (A)</option>
-			<option value="MS">MS (B)</option>
+			<option value="LW">LW (A)</option>
 			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
-			<option value="SC">SC (B)</option>
+			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
   		TWO
@@ -29,12 +28,11 @@
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
 			<option value="JC">JC (B)</option>
-			<option value="JK">JK (A)</option>
-			<option value="MS">MS (B)</option>
+			<option value="LW">LW (A)</option>
 			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
-			<option value="SC">SC (B)</option>
+			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
   		THREE
@@ -42,12 +40,11 @@
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
 			<option value="JC">JC (B)</option>
-			<option value="JK">JK (A)</option>
-			<option value="MS">MS (B)</option>
+			<option value="LW">LW (A)</option>
 			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
-			<option value="SC">SC (B)</option>
+			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
   		FOUR
@@ -55,12 +52,11 @@
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
 			<option value="JC">JC (B)</option>
-			<option value="JK">JK (A)</option>
-			<option value="MS">MS (B)</option>
+			<option value="LW">LW (A)</option>
 			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
-			<option value="SC">SC (B)</option>
+			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
   		FIVE
@@ -68,12 +64,11 @@
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
 			<option value="JC">JC (B)</option>
-			<option value="JK">JK (A)</option>
-			<option value="MS">MS (B)</option>
+			<option value="LW">LW (A)</option>
 			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
-			<option value="SC">SC (B)</option>
+			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
   		SIX
@@ -81,12 +76,11 @@
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
 			<option value="JC">JC (B)</option>
-			<option value="JK">JK (A)</option>
-			<option value="MS">MS (B)</option>
+			<option value="LW">LW (A)</option>
 			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
-			<option value="SC">SC (B)</option>
+			<option value="SF">SF (A)</option>
 		</select>
   	</div>
     <button id="run">Run</button>
