--- a/doubles/index.html
+++ b/doubles/index.html
@@ -15,11 +15,13 @@
 	  	<select name="playSix" id="playSix">
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
+			<option value="DW">DW (A)</option>
 			<option value="JC">JC (B)</option>
 			<option value="LW">LW (A)</option>
-			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
+			<option value="PW">PW (Either)</option>
+			<option value="RH">RH (A)</option>
 			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
@@ -27,11 +29,13 @@
 	  	<select name="refSix" id="refSix">
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
+			<option value="DW">DW (A)</option>
 			<option value="JC">JC (B)</option>
 			<option value="LW">LW (A)</option>
-			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
+			<option value="PW">PW (Either)</option>
+			<option value="RH">RH (A)</option>
 			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
@@ -39,11 +43,13 @@
 	  	<select name="oneOne" id="oneOne">
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
+			<option value="DW">DW (A)</option>
 			<option value="JC">JC (B)</option>
 			<option value="LW">LW (A)</option>
-			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
+			<option value="PW">PW (Either)</option>
+			<option value="RH">RH (A)</option>
 			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
@@ -51,11 +57,13 @@
 	  	<select name="oneTwo" id="oneTwo">
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
+			<option value="DW">DW (A)</option>
 			<option value="JC">JC (B)</option>
 			<option value="LW">LW (A)</option>
-			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
+			<option value="PW">PW (Either)</option>
+			<option value="RH">RH (A)</option>
 			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
@@ -63,11 +71,13 @@
 	  	<select name="twoOne" id="twoOne">
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
+			<option value="DW">DW (A)</option>
 			<option value="JC">JC (B)</option>
 			<option value="LW">LW (A)</option>
-			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
+			<option value="PW">PW (Either)</option>
+			<option value="RH">RH (A)</option>
 			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
@@ -75,11 +85,13 @@
 	  	<select name="twoTwo" id="twoTwo">
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
+			<option value="DW">DW (A)</option>
 			<option value="JC">JC (B)</option>
 			<option value="LW">LW (A)</option>
-			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
+			<option value="PW">PW (Either)</option>
+			<option value="RH">RH (A)</option>
 			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
@@ -87,11 +99,13 @@
 	  	<select name="threeOne" id="threeOne">
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
+			<option value="DW">DW (A)</option>
 			<option value="JC">JC (B)</option>
 			<option value="LW">LW (A)</option>
-			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
+			<option value="PW">PW (Either)</option>
+			<option value="RH">RH (A)</option>
 			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
@@ -99,11 +113,13 @@
 	  	<select name="threeTwo" id="threeTwo">
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
+			<option value="DW">DW (A)</option>
 			<option value="JC">JC (B)</option>
 			<option value="LW">LW (A)</option>
-			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
+			<option value="PW">PW (Either)</option>
+			<option value="RH">RH (A)</option>
 			<option value="SF">SF (A)</option>
 		</select>
   	</div>
