--- a/singles/index.html
+++ b/singles/index.html
@@ -15,11 +15,13 @@
 	  	<select name="one" id="one">
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
+			<option value="DW">DW (A)</option>
 			<option value="JC">JC (B)</option>
 			<option value="LW">LW (A)</option>
-			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
+			<option value="PW">PW (Either)</option>
+			<option value="RH">RH (A)</option>
 			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
@@ -27,11 +29,13 @@
 	  	<select name="two" id="two">
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
+			<option value="DW">DW (A)</option>
 			<option value="JC">JC (B)</option>
 			<option value="LW">LW (A)</option>
-			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
+			<option value="PW">PW (Either)</option>
+			<option value="RH">RH (A)</option>
 			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
@@ -39,11 +43,13 @@
 	  	<select name="three" id="three">
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
+			<option value="DW">DW (A)</option>
 			<option value="JC">JC (B)</option>
 			<option value="LW">LW (A)</option>
-			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
+			<option value="PW">PW (Either)</option>
+			<option value="RH">RH (A)</option>
 			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
@@ -51,11 +57,13 @@
 	  	<select name="four" id="four">
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
+			<option value="DW">DW (A)</option>
 			<option value="JC">JC (B)</option>
 			<option value="LW">LW (A)</option>
-			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
+			<option value="PW">PW (Either)</option>
+			<option value="RH">RH (A)</option>
 			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
@@ -63,11 +71,13 @@
 	  	<select name="five" id="five">
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
+			<option value="DW">DW (A)</option>
 			<option value="JC">JC (B)</option>
 			<option value="LW">LW (A)</option>
-			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
+			<option value="PW">PW (Either)</option>
+			<option value="RH">RH (A)</option>
 			<option value="SF">SF (A)</option>
 		</select>
 		<br/>
@@ -75,11 +85,13 @@
 	  	<select name="six" id="six">
 			<option value="DD">DD (A)</option>
 			<option value="DM">DM (A)</option>
+			<option value="DW">DW (A)</option>
 			<option value="JC">JC (B)</option>
 			<option value="LW">LW (A)</option>
-			<option value="NA">NA (A)</option>
 			<option value="ND">ND (B)</option>
 			<option value="PC">PC (B)</option>
+			<option value="PW">PW (Either)</option>
+			<option value="RH">RH (A)</option>
 			<option value="SF">SF (A)</option>
 		</select>
   	</div>
